# Examples

./: .gitignore  README.md
bash/: README.md  image_api_example.sh
cpp/: CMakeLists.txt
cpp/src/: disease_minimal.cpp  symptoms_minimal.cpp
data/bash_example/folder_1/: meta_data.json
data/bash_example/folder_2/: meta_data.json
data/bash_example/folder_3/: meta_data.json
data/batch_example/folder_1/: meta_data.json
data/batch_example/folder_2/: PEAT_20160609_122358_85d9410f-5452-42da-b471-2d80a4e9d94e.json~  meta_data.json
data/batch_example/folder_3/: meta_data.json
java/: README.md
java/peat_api_examples/src/com/peat/examples/: DiseaseMinimal.java  ImageAPIBatchProcessing.java  ImageAPIMinimal.java  SymptomsMinimal.java
python/: PEAT_image_API_minimal_script.py  README.md  disease_minimal.py  image_api_bash_minimal.py  image_api_batch_minimal.py  image_api_minimal.py  image_symptoms_minimal.py  symptoms_minimal.py
python/data/: example.json
ruby/: disease_minimal.rb  image_minimal.rb  symptoms_minimal.rb
